switched to react icons, fix overflow scroll on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,7 @@ html, body {
     width: 100vw;
     background: #D6F4FF;
     color: black;
+    position: fixed;
 }
 
 html::-webkit-scrollbar {
@@ -27,6 +28,11 @@ html::-webkit-scrollbar {
 
 .icon {
     @apply text-black h-6;
+}
+
+/* create a spinning icon */
+.icon-spin {
+    animation: spin 2s linear infinite;
 }
 
 /* common css */
@@ -48,7 +54,7 @@ html::-webkit-scrollbar {
     transition: 1s ease;
     padding: 10px;
     text-align: center;
-    font-size: clamp(1.5rem, -0.875rem + 8.333333vw, 3.5rem);
+    font-size: clamp(1.8rem, -0.875rem + 8.333333vw, 3.5rem);
 }
 
 .merriweather {
